SET(utils_SRCS image.cxx filesystem.cxx vision.cxx dataset.cxx numerics.cxx misc.cxx cache.cxx)

ADD_LIBRARY(utils ${utils_SRCS})
INCLUDE_DIRECTORIES(utils ${VOCAB_TREE_INCLUDE} ${BOOST_INCLUDE_PATH} ${OPENCV_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(utils ${BOOST_LIBRARIES} ${OPENCV_LIBRARIES})
SET_TARGET_PROPERTIES(utils PROPERTIES COMPILE_FLAGS -fPIC)